# autonomous_park_ros

./: .gitignore  LICENSE.txt  README.md
audibot_control/: CMakeLists.txt  audibot_control_plugins.xml  package.xml
audibot_control/config/: audibot_control.yaml
audibot_control/include/audibot_control/: ActuatorSim.h  AudiSpeedControl.h  AudiSteeringControl.h
audibot_control/launch/: audibot_control.launch
audibot_control/src/: ActuatorSim.cpp  AudiSpeedControl.cpp  AudiSteeringControl.cpp  twist_controller.cpp
audibot_control/yaml/: twist_controller_params.yaml
audibot_description/: CMakeLists.txt  package.xml
audibot_description/urdf/: audibot.urdf.xacro  audibot_control.urdf  audibot_friction.urdf  audibot_sensors.urdf.xacro
audibot_gazebo/: CMakeLists.txt  package.xml
audibot_gazebo/launch/: audibot_robot.launch
bicycle_state_space/: CMakeLists.txt  package.xml
bicycle_state_space/launch/: bicycle_state_space.launch  odom_node.launch
bicycle_state_space/rviz/: visualize.rviz
bicycle_state_space/src/: bicycle_state_space.cpp  odom_node.cpp
car_nav/: CMakeLists.txt  package.xml
car_nav/launch/: car_nav.launch
car_nav/rviz/: config.rviz  config2.rviz  config3.rviz  config5.rviz
car_nav/src/: car_nav_node.cpp
car_nav/world/: sample1.world  sample2.world  sample3.world  sample4.world  sample5.world
car_nav/yaml/: costmap_params.yaml  global_planner_params.yaml  loaded_costmap_params.yaml  local_costmap_params.yaml  local_planner_params.yaml  teb_local_planner_params.yaml
img_transform/: CMakeLists.txt  package.xml
img_transform/src/: img_transform_node.cpp
master_control/: CMakeLists.txt  package.xml
master_control/launch/: final_project.launch
master_control/src/: master_node.cpp  parking_movement.cpp
project_gazebo/: CMakeLists.txt  package.xml
project_gazebo/models/parking_lot_1/: model.config  model.sdf
project_gazebo/models/parking_lot_2/: model.config  model.sdf
project_gazebo/models/parking_lot_2/meshes/: parking_lot_2.dae
robot_sensors/: CMakeLists.txt  package.xml
robot_sensors/urdf/: audibot_camera.urdf.xacro  audibot_sonar.urdf.xacro  hokuyo_urg_04.urdf.xacro  hokuyo_ust_10.urdf.xacro  hokuyo_utm_30.urdf.xacro
set_nav_point/: CMakeLists.txt  package.xml
set_nav_point/src/: set_nav_point.cpp
spot_detection/: CMakeLists.txt  package.xml
spot_detection/cfg/: lane_extract.cfg  vehicle_control.cfg
spot_detection/launch/: GazeboTest.launch  feature2d.launch  new_parking.launch  odom_test.launch  spot_detection.launch  test.launch
spot_detection/rviz/: config.rviz  scan_visualization.rviz
spot_detection/src/: feature2d.cpp  find_parking.cpp  image_transform.cpp  lane_extract.cpp  vehicle_control.cpp
spot_detection/urdf/: lane_mark.urdf.xacro
spot_detection/world/: New_parking.world  empty_test.world  parking1.world  parking2.world  plane.world  spot.world  test.world
spot_detection/world/jade/: detect.world  parking_lot_1.world
ugv_course_gazebo/: CMakeLists.txt  package.xml
ugv_course_gazebo/launch/: gazebo_world.launch
ugv_course_gazebo/models/building1/: model.config  model.sdf
ugv_course_gazebo/models/building2/: model.config  model.sdf
ugv_course_gazebo/models/curved_road_100m/: model.config  model.sdf
ugv_course_gazebo/models/curved_road_100m/meshes/: curved_road_100m.dae
ugv_course_gazebo/models/curved_road_50m/: model.config  model.sdf
ugv_course_gazebo/models/curved_road_50m/meshes/: curved_road_50m.dae
ugv_course_gazebo/models/intersection/: model.config  model.sdf
ugv_course_gazebo/models/intersection/meshes/: intersection.dae
ugv_course_gazebo/models/maze1/: maze1.sdf  model.config
ugv_course_gazebo/models/straight_road_100m/: model.config  model.sdf
ugv_course_gazebo/models/straight_road_100m/meshes/: straight_road_100m.dae
ugv_course_gazebo/models/straight_road_200m/: model.config  model.sdf
ugv_course_gazebo/models/straight_road_200m/meshes/: straight_road_200m.dae
ugv_course_gazebo/models/straight_road_50m/: model.config  model.sdf
ugv_course_gazebo/models/straight_road_50m/meshes/: straight_road_50m.dae
ugv_course_gazebo/worlds/: empty_world.world  example_world.world  homework3.world  maze_world.world  road_world.world
ugv_course_gazebo_plugins/: CMakeLists.txt  package.xml
ugv_course_gazebo_plugins/cfg/: GpsPlugin.cfg
ugv_course_gazebo_plugins/include/ugv_course_gazebo_plugins/: GpsPlugin.h  PosePlugin.h  ViewControlPlugin.h
ugv_course_gazebo_plugins/src/: GpsPlugin.cpp  PosePlugin.cpp  ViewControlPlugin.cpp
ugv_course_launch/: CMakeLists.txt  package.xml
ugv_course_launch/launch/: audibot_homework3.launch  audibot_road_world.launch  audibot_sim_project.launch  omnibot_homework3.launch  road_world.launch  roundbot_gmapping_sim.launch  roundbot_homework3.launch  roundbot_nav_sim.launch  spawn_gazebo_robot.launch
ugv_course_libs/: CMakeLists.txt  package.xml
ugv_course_libs/include/ugv_course_libs/: gps_conv.h
