<?xml version="1.0"?>
<package>
  <name>audibot_control</name>
  <version>0.0.0</version>
  <description>The audibot_control package</description>
  <maintainer email="micho@todo.todo">micho</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
	<controller_interface plugin="${prefix}/audibot_control_plugins.xml" />
  </export>
</package>
