<?xml version="1.0"?>
<package>
  <name>car_nav</name>
  <version>0.0.0</version>
  <description>The car_nav package</description>

  <maintainer email="student@todo.todo">student</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>teb_local_planner</build_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>teb_local_planner</run_depend>

  <export>
  </export>
</package>
