<?xml version="1.0"?>
<package>
  <name>project_gazebo</name>
  <version>0.0.0</version>
  <description>The project_gazebo package</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
