<?xml version="1.0"?>
<package>
  <name>robot_sensors</name>
  <version>0.0.0</version>
  <description>The robot_sensors package</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
