<?xml version="1.0"?>
<package>
  <name>set_nav_point</name>
  <version>0.0.0</version>
  <description>The set_nav_point package</description>

  <maintainer email="student@todo.todo">student</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ugv_course_libs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ugv_course_libs</run_depend>

  <export>
  </export>
</package>
