<?xml version="1.0"?>
<package>
  <name>ugv_course_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>The ugv_course_gazebo_plugins package</description>
  <maintainer email="micho@todo.todo">micho</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ugv_course_libs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ugv_course_libs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
  </export>
</package>
