<?xml version="1.0"?>
<package>
  <name>ugv_course_launch</name>
  <version>0.0.0</version>
  <description>The ugv_course_launch package</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
